--- a/layout_flexbox2.html
+++ b/layout_flexbox2.html
@@ -60,6 +60,7 @@
 
         div {
             margin-top: 10px;
+            margin-bottom: 10px;
             background-color: rgb(249, 112, 112);
             display: flex;
             width: 100%;
